--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
         "symfony/webpack-encore-bundle": "^v1.15.0",
         "twig/intl-extra": "^3.7",
         "twig/twig": "^3.4",
-        "fullpipe/twig-webpack-extension": "^4.0"
+        "fullpipe/twig-webpack-extension": "^4.0",
+        "symfony/form": "^6.4",
+        "symfony/validator": "^6.4",
+        "symfony/security-csrf": "^6.4",
+        "symfony/translation": "^6.4"
     },
     "autoload": {
         "psr-4": {
