--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/orm": "^2.15",
         "symfony/cache": "^6.3",
         "slim/flash": "^0.4.0",
-        "symfony/twig-bridge": "^6.1",
+        "symfony/twig-bridge": "^6.3",
         "symfony/webpack-encore-bundle": "^v1.15.0",
         "twig/intl-extra": "^3.7",
         "twig/twig": "^3.4",
@@ -20,11 +20,24 @@
         "symfony/form": "^6.4",
         "symfony/validator": "^6.4",
         "symfony/security-csrf": "^6.4",
-        "symfony/translation": "^6.4"
+        "symfony/translation": "^6.4",
+        "phpspec/prophecy-phpunit": "^2.2"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5",
+        "selective/test-traits": "^4.1"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
