--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,4 +3,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.php [QSA,L]
 
-SetEnv APP_ENV prod
+#SetEnv APP_ENV test
